# goosnav-skill-pack

./: HANDOFF.md  README.md  agent_critique_prompt.txt  install-all.command  install-all.ps1  install-all.sh  validate-pack.py
aesthetic-web-design/: SKILL.md  install.ps1  install.sh
aesthetic-web-design/references/: anti-slop.md  starter-tokens.css
extra-skills/goosnav-agentic-orchestration/: install.sh
extra-skills/goosnav-local-first-workbench/: install.ps1
goosnav-agentic-orchestration/: LICENSE.txt  SKILL.md  install.ps1
goosnav-codebase-upgrade/: LICENSE.txt  SKILL.md  install.ps1  install.sh
goosnav-local-first-workbench/: SKILL.md  install.sh
goosnav-mvp-delivery/: SKILL.md  install.ps1  install.sh
goosnav-parent-verification/: SKILL.md
goosnav-research-simulation/: install.ps1
goosnav-revenue-validation/: SKILL.md  install.ps1  install.sh
goosnav-software-productization/: LICENSE.txt  README.txt  SKILL.md  install.ps1  install.sh
goosnav-software-productization/assets/m1a-launcher/project/app/: pyproject.toml
goosnav-software-productization/assets/m1a-launcher/project/app/launcher/: bootstrap.py  checksums.sha256  manifest.json
goosnav-software-productization/assets/m1a-launcher/project/app/launcher/tools/macos-arm64/: .keep
goosnav-software-productization/assets/m1a-launcher/project/app/src/: .keep
goosnav-software-productization/assets/m1a-launcher/project/app/static/: .keep
minimal-html-web-design/: SKILL.md  install.ps1  install.sh
nasa-v-model/: LICENSE.txt  SKILL.md  install.ps1  install.sh
(+64 files in other folders)
