[project]
name = "product-name"
version = "0.0.0"
requires-python = "==3.12.10"
dependencies = []

[tool.uv]
package = false
no-build = true
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'win32' and platform_machine == 'ARM64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
